// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probando componente <GifExpertApp /> Debe hacer render el componente correctamente 1`] = `
<div>
  <h2>
    GifExpert
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</div>
`;

exports[`Probando componente <GifExpertApp /> debe mostrar una lista de categorias 1`] = `
<div>
  <h2>
    GifExpert
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="goku"
      key="goku"
    />
    <GifGrid
      category="pokemon"
      key="pokemon"
    />
    <GifGrid
      category="hola"
      key="hola"
    />
  </ol>
</div>
`;
